--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "6.0.6",
+    "@react-navigation/stack": "^6.1.1",
+    "i18next": "^21.8.4",
     "react": "17.0.2",
-    "react-native": "0.68.1"
+    "react-i18next": "^11.16.9",
+    "react-native": "0.68.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react-native": "0.63.46",
+    "@types/react-native": "^0.67.7",
     "@typescript-eslint/eslint-plugin": "5.12.0",
     "@typescript-eslint/parser": "5.12.0",
     "babel-jest": "^26.6.3",
