--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "6.0.6",
     "@react-navigation/stack": "^6.1.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "i18next": "^21.8.4",
     "react": "17.0.2",
     "react-i18next": "^11.16.9",
