--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/native": "6.0.6",
     "@react-navigation/stack": "^6.1.1",
     "@reduxjs/toolkit": "^1.8.2",
+    "formik": "^2.2.9",
     "i18next": "^21.8.4",
     "react": "17.0.2",
     "react-i18next": "^11.16.9",
     "react-native": "0.68.1",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
