--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "6.0.6",
+    "@react-navigation/stack": "^6.1.1",
+    "@reduxjs/toolkit": "^1.8.2",
+    "formik": "^2.2.9",
+    "i18next": "^21.8.4",
     "react": "17.0.2",
-    "react-native": "0.68.1"
+    "react-i18next": "^11.16.9",
+    "react-native": "0.68.1",
+    "react-redux": "^8.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react-native": "^0.67.7",
+    "@typescript-eslint/eslint-plugin": "5.12.0",
+    "@typescript-eslint/parser": "5.12.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "react-native"
